[package]
name = "ryancloud"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actix-files = "0.6"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
sea-orm-macros = "0.12"
actix-session = { version = "0.7", features = ["cookie-session"] }
bcrypt = "0.17.1"
#mvc_views = "0.1.4"
serde = "1.0.219"
serde_json = "1.0"
dotenvy = "0.15.7"
